# import-videos

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE.md  README.md
docs/: ROADMAP.md
docs/adr/: 0001-rust-as-learning-project.md  0002-hand-rolled-mp4-and-gpmf-parsers.md  0003-scan-plan-execute-safety-model.md  0004-yaml-config-with-profile-per-device.md  0005-single-crate-trait-based-extensibility.md  0006-tesla-wall-clock-naming-vs-system-timezone-instants.md  0007-quarantine-copy-is-optional.md  0008-global-timezone-and-unified-sidecar.md  0009-quick-match-trades-verification-for-speed.md  0010-cleanup-age-is-quarantine-arrival-time.md  0011-cli-overridability-policy.md  0012-copy-verification-reads-back-the-written-file.md  0013-reflink-structural-verification.md  0014-multi-drive-continues-past-a-failed-drive.md  README.md
docs/learning/: README.md  binary-parsing-with-std.md  canonicalized-path-boundaries.md  copy-on-write-reflink.md  errors-thiserror-vs-anyhow.md  illegal-states-with-enums.md  iterators-lifetimes-in-stream-parsing.md  jiff-zoned-rendering.md  lib-bin-split.md  makewriter-and-global-state.md  serde-view-models-vs-domain-types.md  systemtime-jiff-and-predicate-split.md  trait-objects-vs-generics.md
openspec/: config.yaml
src/: cleanup.rs  cli.rs  config.rs  error.rs  inspect.rs  lib.rs  main.rs  plan.rs  progress.rs  report.rs  transfer.rs
src/config/: layout.rs
src/media/: gpmf.rs  mod.rs  mp4.rs
tests/: cleanup.rs  cli_overrides.rs  gopro_gps.rs  gopro_import.rs  inspect.rs  integration.rs  summary_flag.rs  tesla_import.rs
(+92 files in other folders)
