[package]
name = "import-videos"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.5"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
globset = "0.4.18"
indicatif = "0.17.11"
jiff = "0.2.32"
reflink-copy = "0.1.30"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
